Changed Some CSS Property

--- a/views/manage.jade
+++ b/views/manage.jade
@@ -32,7 +32,7 @@ html
                     a(href='/admin/home') Dashboard
                   |                                 
                   li(class=(title == 'Amolak-Bachan' ? 'active' : ''))
-                    a(href='/admin/bachan') Amolak-Bachan
+                    a(href='/admin/bachan') Bachan
                   |                              
                   li(class=(title == 'Simran' ? 'active' : ''))
                     a(href='/admin/simran') Simran
@@ -41,7 +41,7 @@ html
                     a(href='/admin/download') Download
                   |                                 
                   li(class=(title == 'Gurbani-Quotes' ? 'active' : ''))
-                    a(href='/admin/quote') Gurbani-Quotes
+                    a(href='/admin/quote') Quotes
                   |                                 
                   li.dropdown
                     a.dropdown-toggle(data-toggle='dropdown') Katha
@@ -64,7 +64,7 @@ html
                       b Upload Image                            
                   li(class=(title == 'contactUs' ? 'active' : ''))
                     a(href='/admin/contact')
-                      b Contact Us   
+                      b Query  
                   li(class=(title == 'Logout' ? 'active' : ''))
                     a(href='/admin/logout')
                       b Logout                             
