--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -105,7 +105,7 @@ a {
   color: #00B7FF;
 }
 
-ul.success li,ul.info li,ul.error li{
+ul.success li,ul.info li,ul.errors li{
 	margin:20px 0 20px 0;
 	padding:15px;
 	border:1px solid transparent;
