--- a/views/manage/auth/bachan/add.jade
+++ b/views/manage/auth/bachan/add.jade
@@ -6,6 +6,10 @@ block content
       h1.logo.logo-font.fontHead  ADD AMOLAK-BACHAN
       .row.contactFrame
         .col-md-12
+          ul.errors
+            if errors
+              each error,i in errors
+                li.alert.alert-danger #{error.msg}
           form.form-horizontal(role='form', method='post', action='/admin/bachan/add')
             .form-group
               label.control-label.col-sm-2(for='name') Title : 
