--- a/views/manage/auth/bachan/edit.jade
+++ b/views/manage/auth/bachan/edit.jade
@@ -7,6 +7,10 @@ block content
       if bachans
           .row.contactFrame
             .col-md-12
+              ul.errors
+                if errors
+                  each error,i in errors
+                    li.alert.alert-danger #{error.msg}
               form.form-horizontal(role='form', method='post', action='/admin/bachan/edit/#{bachans._id}')
                 .form-group
                   label.control-label.col-sm-2(for='name') Title : 
