--- a/views/manage/auth/quotes/add.jade
+++ b/views/manage/auth/quotes/add.jade
@@ -6,12 +6,16 @@ block content
       h1.logo.logo-font.fontHead  ADD QUOTE SECTION
       .row.contactFrame
         .col-md-12
-          form.form-horizontal(role='form', method='post', action='/admin/quote/add')
-            .form-group
-              label.control-label.col-sm-2(for='name') Phrase : 
-              .col-sm-10
-                input#title.form-control(type='name', name='phrase', placeholder='Enter phrase')
-            .form-group
-              .col-sm-offset-2.col-sm-10
-                button.btn.btn-primary(type='submit') Submit
-          input(type='hidden', name='_csrf', value='{_csrf}')
+          ul.errors
+            if errors
+              each error,i in errors
+                li.alert.alert-danger #{error.msg}
+            form.form-horizontal(role='form', method='post', action='/admin/quote/add')
+              .form-group
+                label.control-label.col-sm-2(for='name') Phrase : 
+                .col-sm-10
+                  input#title.form-control(type='name', name='phrase', placeholder='Enter phrase')
+              .form-group
+                .col-sm-offset-2.col-sm-10
+                  button.btn.btn-primary(type='submit') Submit
+            input(type='hidden', name='_csrf', value='{_csrf}')
