Routing error removed

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,7 +35,7 @@ html
                     a(href='/bachan') Amolak-Bachan
                   |                              
                   li(class=(title == 'Simran' ? 'active' : ''))
-                    a(href='simran') Simran
+                    a(href='/simran') Simran
                   |                                 
                   li(class=(title == 'Download' ? 'active' : ''))
                     a(href='/download') Download
