--- a/views/manage.jade
+++ b/views/manage.jade
@@ -116,7 +116,7 @@ html
                             | Home
                             i.fa.fa-tags.pr-10                                
                         li
-                          a.linkPad(href='/amolakBachan')
+                          a.linkPad(href='/bachan')
                             | Amolak Bachan
                             i.fa.fa-tags.pr-10
                         |                                    
@@ -136,7 +136,7 @@ html
                             i.fa.fa-tags.pr-10
                         |                                    
                         li
-                          a.linkPad(href='/watchKatha')
+                          a.linkPad(href='/viewKatha')
                             | Watch Katha
                             i.fa.fa-tags.pr-10
                         |                                    
@@ -151,7 +151,7 @@ html
                             i.fa.fa-tags.pr-10
                         |                                    
                         li
-                          a.linkPad(href='/contactUs')
+                          a.linkPad(href='/contact')
                             | Contact us
                             i.fa.fa-tags.pr-10
                 .row
