--- a/views/manage/auth/contact/index.jade
+++ b/views/manage/auth/contact/index.jade
@@ -2,7 +2,7 @@ extends ../../../manage
 
 block content
   .paddStyle
-      #scrollToTop.container-fluid
+      #scrollToTop
         h1.text-center.logo.logo-font.fontHead QUERY FROM CLIENTS
         if contacts
           .row.rowFrame
