--- a/views/manage/auth/img/index.jade
+++ b/views/manage/auth/img/index.jade
@@ -2,12 +2,11 @@ extends ../../../manage
 
 block content
   .paddStyle
-    #scrollToTop.container
+    #scrollToTop
       h1.logo.logo-font.fontHead IMAGE SECTION
       h4 #[a(href='/admin/img/add') Add Image for Home]
       .row
         .col-md-12
-        .container
           if images
             table.table.table-striped.table-bordered.table-hover.table-condensed.tableFrame
               thead
