--- a/views/manage/auth/simran/index.jade
+++ b/views/manage/auth/simran/index.jade
@@ -2,12 +2,11 @@ extends ../../../manage
 
 block content
   .paddStyle
-    #scrollToTop.container
+    #scrollToTop
       h1.logo.logo-font.fontHead SIMRAN SECTION
       h4 #[a(href='/admin/simran/add') Add Simran]
       .row
         .col-md-12
-        .container
           if simrans
             table.table.table-striped.table-bordered.table-hover.table-condensed.tableFrame
               thead
