--- a/views/user/contact/index.jade
+++ b/views/user/contact/index.jade
@@ -2,7 +2,7 @@ extends ../../../views/layout
 
 block content
 	.paddStyle
-		#scrollToTop.container-fluid
+		#scrollToTop
 			h1.text-center.logo.logo-font.fontHead CONTACT US
 			.row.contactFrame
 				.col-md-12
