--- a/views/user/schedule/index.jade
+++ b/views/user/schedule/index.jade
@@ -2,7 +2,7 @@ extends ../../../views/layout
 
 block content
 	.paddStyle
-		#scrollToTop.container-fluid
+		#scrollToTop
 			h1.text-center.logo.fontHead.logo-font SCHEDULE
 			.row
 				if schedules
