--- a/views/manage/auth/katha/index.jade
+++ b/views/manage/auth/katha/index.jade
@@ -2,12 +2,11 @@ extends ../../../manage
 
 block content
   .paddStyle
-    #scrollToTop.container
+    #scrollToTop
       h1.logo.logo-font.fontHead KATHA SECTION
       h4 #[a(href='/admin/katha/add') Add Katha]
       .row
         .col-md-12
-        .container
           if katha
             table.table.table-striped.table-bordered.table-hover.table-condensed.tableFrame
               thead
@@ -20,7 +19,7 @@ block content
               tbody
                 each Katha,i in katha
                   tr
-                    td   #{Katha.shabad_p} <br/>
+                    td.text-justify   #{Katha.shabad_p} <br/>
                       |  #{Katha.shabad_h} <br/>
                       |  #{Katha.shabad_pe} <br/>
                       |  #{Katha.meaning_e}
