--- a/views/manage/auth/quotes/index.jade
+++ b/views/manage/auth/quotes/index.jade
@@ -2,12 +2,11 @@ extends ../../../manage
 
 block content
   .paddStyle
-    #scrollToTop.container
+    #scrollToTop
       h1.logo.logo-font.fontHead QUOTE SECTION
       h4 #[a(href='/admin/quote/add') Add Quote]
       .row
         .col-md-12
-        .container
           if quotes
             table.table.table-striped.table-bordered.table-hover.table-condensed.tableFrame
               thead
