--- a/views/manage/auth/schedule/index.jade
+++ b/views/manage/auth/schedule/index.jade
@@ -7,24 +7,23 @@ block content
       h4 #[a(href='/admin/schedule/add') Add Schedule]
       .row
         .col-md-12
-        .container
           if schedules
             table.table.table-striped.table-bordered.table-hover.table-condensed.tableFrame
               thead
                 tr
                   th Date
-                  th Place  
+                  //- th Place  
                   th Venue
-                  th Direction(from Google MAP)
+                  //- th Direction(from Google MAP)
                   th
                   th
               tbody
                 each schedule,i in schedules
                   tr
                     td #{schedule.date}
-                    td #{schedule.place}
+                    //- td #{schedule.place}
                     td #{schedule.direction}
-                    td #[a.btn.btn-primary.center-block(href='#{schedule.link}') Link]
+                    //- td #[a.btn.btn-primary.center-block(href='#{schedule.link}') Link]
                     td #[a.btn.btn-primary.center-block(href='/admin/schedule/edit/#{schedule._id}') Edit]
                     td #[a.btn.btn-danger.center-block.removeSchedule(data-id='#{schedule._id}') Delete]
           else
