--- a/views/user/hukumnama/index.jade
+++ b/views/user/hukumnama/index.jade
@@ -2,7 +2,7 @@ extends ../../../views/layout
 
 block content
 	.paddStyle
-		#scrollToTop.container-fluid
+		#scrollToTop
 			h1.text-center.logo.logo-font.fontHead HUKUMNAMA
 			.row.rowFrame
 				.col-md-offset-3.col-md-6
