--- a/views/user/kathas/index.jade
+++ b/views/user/kathas/index.jade
@@ -2,18 +2,17 @@ extends ../../../views/layout
 
 block content
 	.paddStyle
-		#scrollToTop.container-fluid
+		#scrollToTop
 			h1.text-center.logo.logo-font.fontHead Katha a day
 			.row.tableFrame
 				if kathas
 					.col-md-12
-						.container
 							table.table.table-striped.table-bordered.table-hover.table-condensed
 								thead
 									tr
 										th Shabad
 										th Download  
-										th Ang in Sri Guru Granth Sahib Ji 
+										th Ang 
 										th Place   
 										th Date Added
 								tbody
